manifests/cassandraset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandraset
spec:
  serviceName: cassandraservice
  replicas: 1
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      containers:
      - name: cassandra-container
        image: acrprojectbose.azurecr.io/projectboseaks
        ports:
        - containerPort: 9160
          name: regularport
        - containerPort: 9042
          name: queryport
        volumeMounts:
        - name: cassandra-vol
          mountPath: /var/lib/cassandra
        - name: blobinputstaging
          mountPath: /mnt/blob/input
        - name: bloboutputstaging
          mountPath: /mnt/blob/output
      volumes:
        - name: blobinputstaging
          persistentVolumeClaim:
            claimName: pvc-blob-input
        - name: bloboutputstaging
          persistentVolumeClaim:
            claimName: pvc-blob-output
  volumeClaimTemplates:
  - metadata:
      name: cassandra-vol
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
