manifests/deployLeveldetailsAPI.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "leveldetailsdeploy"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "leveldetailsdeploy"
  template:
    metadata:
      labels:
        app: "leveldetailsdeploy"
    spec:
      containers:
        - name: "leveldetailsdeploy"
          image: "acrprojectbose.azurecr.io/projectboseaks"
          ports:
          - containerPort: 80
