manifests/deployPreparedataAPI.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "preparedatadeploy"

spec:
  replicas: 2
  selector:
    matchLabels:
      app: "preparedatadeploy"
  template:
    metadata:
      labels:
        app: "preparedatadeploy"
    spec:
      containers:
        - name: "preparedatadeploy"
          image: "acrprojectbose.azurecr.io/projectboseaks"
          ports:
          - containerPort: 80
