manifests/mysqlset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqlset
spec:
  serviceName: mysqlservice
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql-container
        image: projectboseacr.azurecr.io/projectboseaks
        ports:
        - containerPort: 3306
          name: mysqlport
        volumeMounts:
        - name: mysql-volume
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
