manifests/cassandraservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cassandraservice
  name: cassandraservice
spec:
  clusterIP: None
  #########################
  ports:
  - name: 9160-9160
    port: 9160
    protocol: TCP
    targetPort: 9160
  - name: 9042-9042
    port: 9042
    protocol: TCP
    targetPort: 9042
  selector:
    app: cassandra
  type: ClusterIP
status:
  loadBalancer: {}
