manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "projectboseaks-88ec"
    labels:
        app: "projectboseaks-88ec"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "projectboseaks-88ec"
