manifests/serviceLevelAPI.yml
apiVersion: v1
kind: Service
metadata:
    name: "levelservice"
    labels:
        app: "leveldeploy"

spec:
    #type: LoadBalancer
    #loadBalancerIP: 20.93.241.92
    ports:
    - port: 8080
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "leveldeploy"
