manifests/serviceLevelDetailsAPI.yml
apiVersion: v1
kind: Service
metadata:
    name: "leveldetailsservice"
    labels:
        app: "leveldetailsdeploy"

spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "leveldetailsdeploy"
