manifests/serviceLeveldetailsAPI.yml
apiVersion: v1
kind: Service
metadata:
    name: "leveldetailsservice"
    labels:
        app: "leveldetailsdeploy"
spec:
    type: LoadBalancer
    loadBalancerIP: 20.82.85.37
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "leveldetailsdeploy"
