manifests/servicePreparedataAPI.yml
apiVersion: v1
kind: Service
metadata:
    name: "preparedataservice"
    labels:
        app: "preparedatadeploy"

spec:
    #type: LoadBalancer
    #loadBalancerIP: 20.93.241.92
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "preparedatadeploy"
